--- a/Documents/side_project/aspNetCore/BloggieMVC/Bloggie/Bloggie.Web/appsettings.json
+++ b/Documents/side_project/aspNetCore/BloggieMVC/Bloggie/Bloggie.Web/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BloggieDbConnectionString": "Server=localhost;Database=BloggieDb;User=root;Password=MLearning 22!",
-    "BloggieAuthDbConnectionString": "Server=localhost;Database=BloggieAuthDb;User=root;Password=MLearning 22!"
+    "BloggieDbConnectionString": "Server=localhost;Database=BloggieDb;User=root;Password=YourPassword",
+    "BloggieAuthDbConnectionString": "Server=localhost;Database=BloggieAuthDb;User=root;Password=YourPassword"
   },
   "Cloudinary": {
-    "CloudName": "dm3ewrtnc",
-    "ApiKey": "682287177738868",
-    "ApiSecret": "pUdu18kiphLWEm_A1taL9kUf1RU"
+    "CloudName": "YourCloudName",
+    "ApiKey": "YourAPI",
+    "ApiSecret": "abcd"
   }
 }
